--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,3 +95,5 @@ userStatsService.enableSaveLastUsage=${USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE
 security.apiKey.securedPaths=${SECURITY_API_KEYS_SECURED_PATHS}
 security.apiKey.primary=${SECURITY_API_KEYS_PRIMARY}
 security.apiKey.secondary=${SECURITY_API_KEYS_SECONDARY}
+# Transactions view update configuration
+transactionsview.update.enabled=${TRANSACTIONSVIEW_UPDATE_ENABLED:true}
