--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -84,3 +84,5 @@ transactionAuthorizationOutcomeWaiting.firstAttemptDelaySeconds=180
 security.apiKey.securedPaths=/event-dispatcher
 security.apiKey.primary=primary-key
 security.apiKey.secondary=secondary-key
+# Transactions view update configuration
+transactionsview.update.enabled=${TRANSACTIONSVIEW_UPDATE_ENABLED:true}
