--- a/.env.local
+++ b/.env.local
@@ -108,3 +108,4 @@ TRANSACTIONS_SERVICE_CONNECTION_TIMEOUT=10000
 SECURITY_API_KEYS_SECURED_PATHS="/event-dispatcher"
 SECURITY_API_KEYS_PRIMARY=primary-key
 SECURITY_API_KEYS_SECONDARY=secondary-key
+TRANSACTIONSVIEW_UPDATE_ENABLED=true
