feat: make use of reactive redis template

--- a/.env.local
+++ b/.env.local
@@ -105,7 +105,7 @@ TRANSACTIONS_SERVICE_API_KEY=api-key
 TRANSACTIONS_SERVICE_URI="http://localhost:8080/"
 TRANSACTIONS_SERVICE_READ_TIMEOUT=10000
 TRANSACTIONS_SERVICE_CONNECTION_TIMEOUT=10000
-SECURITY_API_KEYS_SECURED_PATHS="/event-dispatcher"
+SECURITY_API_KEYS_SECURED_PATHS=""
 SECURITY_API_KEYS_PRIMARY=primary-key
 SECURITY_API_KEYS_SECONDARY=secondary-key
 TRANSACTIONSVIEW_UPDATE_ENABLED=true
