chore: set save event property to true

--- a/src/test/resources/application.test.properties
+++ b/src/test/resources/application.test.properties
@@ -85,4 +85,4 @@ security.apiKey.securedPaths=/event-dispatcher
 security.apiKey.primary=primary-key
 security.apiKey.secondary=secondary-key
 # Transactions view update configuration
-transactionsview.update.enabled=${TRANSACTIONSVIEW_UPDATE_ENABLED:true}
+transactionsview.update.enabled=true
