feat(deploy): [CHK-4428] restore template usage and add token file creation

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -74,7 +74,7 @@ stages:
         displayName: Build docker with Build.SourceVersion as TAG
         steps:
           - task: Bash@3
-            displayName: "write github token file"
+            displayName: "Write GitHub token file"
             inputs:
               targetType: "inline"
               script: |
@@ -173,7 +173,7 @@ stages:
         displayName: 'Build release candidate docker image'
         steps:
           - task: Bash@3
-            displayName: "write github token file"
+            displayName: "Write GitHub token file"
             inputs:
               targetType: "inline"
               script: |
