--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
 			<url>https://maven.pkg.github.com/pagopa/pagopa-ecommerce-commons</url>
 		</repository>
 	</repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>github</id>
+      <url>https://maven.pkg.github.com/pagopa/depcheck</url>
+    </pluginRepository>
+  </pluginRepositories>
 	<properties>
 		<java.version>21</java.version>
 		<kotlin.version>2.1.21</kotlin.version>
@@ -692,6 +698,24 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+                <groupId>it.pagopa.maven</groupId>
+                <artifactId>depcheck</artifactId>
+                <version>1.3.0</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <fileName>dep-sha256.json</fileName>
+                    <includePlugins>false</includePlugins>
+                    <includeParent>false</includeParent>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
