--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -122,7 +122,7 @@ stages:
     displayName: 'UAT green deployment'
     dependsOn: [ Build_release_candidate ]
     variables:
-      app_version: soak-soak-$(Build.SourceVersion) #chart app version, can differ from release for chart only version bumps
+      app_version: soak-$(Build.SourceVersion) #chart app version, can differ from release for chart only version bumps
       release_version: soak-test-uat #chart version, this version is the same of the github release/tag
     jobs:
       - deployment: "Green_deployment"
