--- a/api-spec/client/openapi/redirect/redirect-api.yaml
+++ b/api-spec/client/openapi/redirect/redirect-api.yaml
@@ -9,11 +9,23 @@ info:
       * `b2b - pagoPA side` are implemented and exposed by pagoPA to receive authorization outcome. For further information on connectivity, see [pagoPA connettivity](https://docs.pagopa.it/sanp/appendici/connettivita#nodo-dei-pagamenti-server).
   contact:
     name: pagoPA - Touchpoints team
+    url: https://www.pagopa.it/
+    email: info@pagopa.it
+  license:
+    name: EUPL-1.2
+    url: https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12
 tags:
   - name: b2b - PSP side
     description: Api's to initialize and refund a transaction
 servers:
   - url: https://${host}
+    variables:
+      host:
+          description: The hostname of the API server
+          default: api.dev.platform.pagopa.it
+          enum:
+            - api.dev.platform.pagopa.it
+            - api.uat.platform.pagopa.it
 externalDocs:
   url: https://docs.pagopa.it/sanp/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect
   description: SANP
@@ -35,12 +47,26 @@ paths:
       responses:
         '200':
           description: Successful refund response
+          headers:
+            X-RateLimit-Limit:
+              $ref: '#/components/headers/RateLimitLimit'
+            X-RateLimit-Remaining:
+              $ref: '#/components/headers/RateLimitRemaining'
+            X-RateLimit-Reset:
+              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/RefundResponse'
         '400':
           description: Formally invalid input
+          headers:
+            X-RateLimit-Limit:
+              $ref: '#/components/headers/RateLimitLimit'
+            X-RateLimit-Remaining:
+              $ref: '#/components/headers/RateLimitRemaining'
+            X-RateLimit-Reset:
+              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
@@ -51,6 +77,13 @@ paths:
                 idTransaction: 3fa85f6457174562b3fc2c963f66afa6
         '401':
           description: Unauthorized
+          headers:
+            X-RateLimit-Limit:
+              $ref: '#/components/headers/RateLimitLimit'
+            X-RateLimit-Remaining:
+              $ref: '#/components/headers/RateLimitRemaining'
+            X-RateLimit-Reset:
+              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
@@ -61,6 +94,13 @@ paths:
                 idTransaction: 3fa85f6457174562b3fc2c963f66afa6
         '404':
           description: Not found
+          headers:
+            X-RateLimit-Limit:
+              $ref: '#/components/headers/RateLimitLimit'
+            X-RateLimit-Remaining:
+              $ref: '#/components/headers/RateLimitRemaining'
+            X-RateLimit-Reset:
+              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
@@ -79,6 +119,8 @@ paths:
                 status: 500
                 detail: There was an error processing the request
                 idTransaction: 3fa85f6457174562b3fc2c963f66afa6
+security:
+  - ApiKeyAuth: []
 components:
   schemas:
     ProblemJson:
@@ -186,3 +228,20 @@ components:
       in: header
       name: Ocp-Apim-Subscription-Key
       description: pagoPA api key
+  headers:
+    RateLimitLimit:
+      description: The maximum number of requests allowed in the current time window.
+      schema:
+        type: integer
+    RateLimitRemaining:
+      description: The number of requests remaining in the current time window.
+      schema:
+        type: integer
+    RateLimitReset:
+      description: Seconds until the rate limit resets.
+      schema:
+        type: integer
+    RateLimitRetryAfter:
+      description: Seconds to wait before retrying after being rate limited.
+      schema:
+        type: integer
