--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -185,7 +185,7 @@ microservice-chart:
     USER_STATS_SERVICE_ENABLE_SAVE_LAST_USAGE: "true"
     NPG_REFUND_EVENT_PROCESSING_DELAY_SECONDS: "10"
     SECURITY_API_KEYS_SECURED_PATHS: "/event-dispatcher"
-    TRANSACTIONSVIEW_UPDATE_ENABLED: "true"
+    TRANSACTIONSVIEW_UPDATE_ENABLED: "false"
   envSecret:
     ECOMMERCE_STORAGE_TRANSIENT_QUEUE_KEY: ecommerce-storage-transient-account-key
     NODO_NODEFORECOMMERCE_API_KEY: node-for-ecommerce-api-v2-key
