fix: removed headers and changed host

--- a/api-spec/event-dispatcher-api.yaml
+++ b/api-spec/event-dispatcher-api.yaml
@@ -24,11 +24,11 @@ servers:
     variables:
       host:
           description: The hostname of the API server
-          default: api.platform.pagopa.it
+          default: weuprod.ecommerce.internal.platform.pagopa.it
           enum:
-            - api.platform.pagopa.it
-            - api.dev.platform.pagopa.it
-            - api.uat.platform.pagopa.it
+            - weudev.ecommerce.internal.dev.platform.pagopa.it
+            - weuuat.ecommerce.internal.uat.platform.pagopa.it
+            - weuprod.ecommerce.internal.platform.pagopa.it
 security:
   - ApiKeyAuth: [ ]
 paths:
@@ -44,22 +44,8 @@ paths:
       responses:
         '202':
           description: Command accepted
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
         '400':
           description: Formally invalid input
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
@@ -70,13 +56,6 @@ paths:
                 detail: Invalid input request
         '401':
           description: Unauthorized
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
@@ -86,15 +65,6 @@ paths:
                 detail: Unauthorized
         '429':
           description: Too many requests
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
-            Retry-After:
-              $ref: '#/components/headers/RateLimitRetryAfter'
           content:
             application/json:
               schema:
@@ -126,26 +96,12 @@ paths:
       responses:
         '200':
           description: The event receivers statuses
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/EventReceiverStatusResponse'
         '401':
           description: Unauthorized
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
@@ -155,13 +111,6 @@ paths:
                 detail: Unauthorized
         '404':
           description: No receiver status information found
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
           content:
             application/json:
               schema:
@@ -170,21 +119,6 @@ paths:
                 title: Not found
                 status: 404
                 detail: No receiver status information could be found
-        '429':
-          description: Too many requests
-          headers:
-            X-RateLimit-Limit:
-              $ref: '#/components/headers/RateLimitLimit'
-            X-RateLimit-Remaining:
-              $ref: '#/components/headers/RateLimitRemaining'
-            X-RateLimit-Reset:
-              $ref: '#/components/headers/RateLimitReset'
-            Retry-After:
-              $ref: '#/components/headers/RateLimitRetryAfter'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ProblemJson'
         '500':
           description: Internal Server Error handling command
           content:
@@ -318,20 +252,3 @@ components:
       in: header
       name: x-api-key
       description: api key authentication
-  headers:
-    RateLimitLimit:
-      description: The maximum number of requests allowed in the current time window.
-      schema:
-        type: integer
-    RateLimitRemaining:
-      description: The number of requests remaining in the current time window.
-      schema:
-        type: integer
-    RateLimitReset:
-      description: Seconds until the rate limit resets.
-      schema:
-        type: integer
-    RateLimitRetryAfter:
-      description: Seconds to wait before retrying after being rate limited.
-      schema:
-        type: integer
